force-app/main/default/objects/animalos__Animal_Report__c/animalos__Animal_Report__c.object-meta.xml
<CustomObject>
    <label>Animal Report</label>
    <nameField>
        <displayFormat>AR{000000}</displayFormat>
        <label>Animal Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>