force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Type__c</fullName>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Type</valueSetName>
    </valueSet>
</CustomField>