force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Breed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Breed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breed</label>
    <referenceTo>animalos__Breed__c</referenceTo>
    <relationshipLabel>Animal Reports</relationshipLabel>
    <relationshipName>Animal_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>