force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Cruelty_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Cruelty_Type__c</fullName>
    <label>Cruelty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>AH Owner Medical Assist</fullName>
            </value>
            <value>
                <fullName>Animal fighting/Prohibited event</fullName>
            </value>
            <value>
                <fullName>Animal in hot vehicle</fullName>
            </value>
            <value>
                <fullName>Baiting</fullName>
            </value>
            <value>
                <fullName>Cause Captive Animal To Be Injured/killed By Dog</fullName>
            </value>
            <value>
                <fullName>Cruelty</fullName>
            </value>
            <value>
                <fullName>Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Heat Distress</fullName>
            </value>
            <value>
                <fullName>Inappropriate Breeding</fullName>
            </value>
            <value>
                <fullName>Inappropriate transport</fullName>
            </value>
            <value>
                <fullName>Inspec ref Community Officer</fullName>
            </value>
            <value>
                <fullName>Insufficient Food</fullName>
            </value>
            <value>
                <fullName>Insufficient Water</fullName>
            </value>
            <value>
                <fullName>Keep or Use Animal for Blooding</fullName>
            </value>
            <value>
                <fullName>Kill or injure</fullName>
            </value>
            <value>
                <fullName>Living Conditions</fullName>
            </value>
            <value>
                <fullName>No exercise | Confined | Tethered</fullName>
            </value>
            <value>
                <fullName>No treatment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pet shop</fullName>
            </value>
            <value>
                <fullName>POI Under 18</fullName>
            </value>
            <value>
                <fullName>Poor Condition</fullName>
            </value>
            <value>
                <fullName>Prohibited devices &amp; items</fullName>
            </value>
            <value>
                <fullName>Prohibited Surgical procedures</fullName>
            </value>
            <value>
                <fullName>Prohibition Order Breached</fullName>
            </value>
            <value>
                <fullName>Unrestrained Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>