force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Date_and_Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_and_Time_of_Incident__c</fullName>
    <label>Date and Time of Incident</label>
    <type>DateTime</type>
</CustomField>