force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Features__c.field-meta.xml
<CustomField>
    <fullName>animalos__Features__c</fullName>
    <label>Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>