force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Incident_Details__c.field-meta.xml
<CustomField>
    <fullName>animalos__Incident_Details__c</fullName>
    <inlineHelpText>Describe what happened</inlineHelpText>
    <label>Incident Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>