force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Is_are_animal_s_likely_to_be_aggressive__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_are_animal_s_likely_to_be_aggressive__c</fullName>
    <label>Is/are animal/s likely to be aggressive?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>