force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Is_Contained__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Contained__c</fullName>
    <label>Is Contained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>