force-app/main/default/objects/animalos__Animal_Report__c/fields/animalos__Number_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>animalos__Number_of_Animals__c</fullName>
    <description>Numeric value of animals</description>
    <label># of Animals</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>