force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Abandoned_or_left__c.field-meta.xml
<CustomField>
    <fullName>aos_Abandoned_or_left__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned or left unattended</label>
    <type>Checkbox</type>
</CustomField>