force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Access_to_shelter__c.field-meta.xml
<CustomField>
    <fullName>aos_Access_to_shelter__c</fullName>
    <inlineHelpText>Does the animal have access to shelter?</inlineHelpText>
    <label>Access to shelter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>