force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Additional_Rescue_Information__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_Rescue_Information__c</fullName>
    <label>Additional Rescue Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Flighted</fullName>
            </value>
            <value>
                <fullName>Animal at Height</fullName>
            </value>
            <value>
                <fullName>Animal In Water</fullName>
            </value>
            <value>
                <fullName>Animal Near High Speed Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>