force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Aggressive__c.field-meta.xml
<CustomField>
    <fullName>aos_Aggressive__c</fullName>
    <label>Aggressive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>