force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_can_move_freely__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_can_move_freely__c</fullName>
    <inlineHelpText>Is the dog/s able to stand up, turn around and lay down, flap wings etc without obstruction</inlineHelpText>
    <label>Animal can move freely</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>