force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_Class__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Class__c</fullName>
    <label>Animal Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>