force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_free_to_roam__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_free_to_roam__c</fullName>
    <label>Animal free to roam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>