force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_in_question__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_in_question__c</fullName>
    <label>Animal in question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>