force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_location__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_location__c</fullName>
    <inlineHelpText>Are the animal/s in the house or yard?</inlineHelpText>
    <label>Animal location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Free to roam</fullName>
            </value>
            <value>
                <fullName>Aviary</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>