force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_Location_comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Location_comments__c</fullName>
    <label>Animal Location comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>