force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Animal_tangled__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_tangled__c</fullName>
    <inlineHelpText>Is the animal tangled?</inlineHelpText>
    <label>Animal tangled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>