force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Any_visitors__c.field-meta.xml
<CustomField>
    <fullName>aos_Any_visitors__c</fullName>
    <inlineHelpText>Have you seen anyone coming or going from the property during their absence?</inlineHelpText>
    <label>Any visitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>