force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Are_any_of_the_following_visible__c.field-meta.xml
<CustomField>
    <fullName>aos_Are_any_of_the_following_visible__c</fullName>
    <label>Are any of the following visible?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ribs</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>