force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Available_food__c.field-meta.xml
<CustomField>
    <fullName>aos_Available_food__c</fullName>
    <label>Available food</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>