force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Body_score__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_score__c</fullName>
    <label>Body score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malnourished</fullName>
            </value>
            <value>
                <fullName>Fit and healthy</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>