force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Breed_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Breed_Name__c</fullName>
    <formula>animalos__Breed__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breed Name</label>
    <type>Text</type>
</CustomField>