force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Breeder_or_Pet_Shop_Inspection__c.field-meta.xml
<CustomField>
    <fullName>aos_Breeder_or_Pet_Shop_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Breeder or Pet Shop Inspection</label>
    <type>Checkbox</type>
</CustomField>