force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Case__c.field-meta.xml
<CustomField>
    <fullName>aos_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Animal Reports (AnimalOS)</relationshipLabel>
    <relationshipName>Animal_Reports_AnimalOS</relationshipName>
    <type>Lookup</type>
</CustomField>