force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Cause_of_Affliction__c.field-meta.xml
<CustomField>
    <fullName>aos_Cause_of_Affliction__c</fullName>
    <label>Cause of Affliction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned/Orphaned</fullName>
            </value>
            <value>
                <fullName>Attacked by cat</fullName>
            </value>
            <value>
                <fullName>Attacked by dog</fullName>
            </value>
            <value>
                <fullName>Attacked by other</fullName>
            </value>
            <value>
                <fullName>Collision with other object</fullName>
            </value>
            <value>
                <fullName>Collision with vehicle</fullName>
            </value>
            <value>
                <fullName>Disease</fullName>
            </value>
            <value>
                <fullName>Domestic/Captivity issue</fullName>
            </value>
            <value>
                <fullName>Electrocution</fullName>
            </value>
            <value>
                <fullName>Entangled/Trapped</fullName>
            </value>
            <value>
                <fullName>Nuisance</fullName>
            </value>
            <value>
                <fullName>Poisoned</fullName>
            </value>
            <value>
                <fullName>Unsuitable environment</fullName>
            </value>
            <value>
                <fullName>Weather—Drought/heat</fullName>
            </value>
            <value>
                <fullName>Weather—Fire</fullName>
            </value>
            <value>
                <fullName>Weather—Storm</fullName>
            </value>
            <value>
                <fullName>Weather—Unspecified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>