force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Condition__c.field-meta.xml
<CustomField>
    <fullName>aos_Condition__c</fullName>
    <label>Condition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actively Bleeding</fullName>
            </value>
            <value>
                <fullName>Blood Visible (Dried, not bleeding)</fullName>
            </value>
            <value>
                <fullName>Broken (other)</fullName>
            </value>
            <value>
                <fullName>Broken Beak</fullName>
            </value>
            <value>
                <fullName>Injured Leg</fullName>
            </value>
            <value>
                <fullName>Broken Neck</fullName>
            </value>
            <value>
                <fullName>Broken Tail</fullName>
            </value>
            <value>
                <fullName>Broken Wing</fullName>
            </value>
            <value>
                <fullName>Burns</fullName>
            </value>
            <value>
                <fullName>Covered in Faeces</fullName>
            </value>
            <value>
                <fullName>Covered in Oil/ Waste</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Dehydrated / Heat Stress</fullName>
            </value>
            <value>
                <fullName>Difficulty Breathing</fullName>
            </value>
            <value>
                <fullName>Emaciated</fullName>
            </value>
            <value>
                <fullName>Erratic movement / Twitching</fullName>
            </value>
            <value>
                <fullName>Eye infection</fullName>
            </value>
            <value>
                <fullName>Eye injury</fullName>
            </value>
            <value>
                <fullName>Foaming at mouth</fullName>
            </value>
            <value>
                <fullName>Heat stress</fullName>
            </value>
            <value>
                <fullName>Inflamed Skin</fullName>
            </value>
            <value>
                <fullName>Lethargic</fullName>
            </value>
            <value>
                <fullName>Limping</fullName>
            </value>
            <value>
                <fullName>Matted Fur</fullName>
            </value>
            <value>
                <fullName>Missing Eye</fullName>
            </value>
            <value>
                <fullName>Missing fur or feathers</fullName>
            </value>
            <value>
                <fullName>Missing Limb</fullName>
            </value>
            <value>
                <fullName>Neurological Symptoms</fullName>
            </value>
            <value>
                <fullName>No Obvious Injuries</fullName>
            </value>
            <value>
                <fullName>Not eating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>