force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Condition_injury__c.field-meta.xml
<CustomField>
    <fullName>aos_Condition_injury__c</fullName>
    <inlineHelpText>What is the animal/s condition/injury</inlineHelpText>
    <label>Condition/injury</label>
    <length>255</length>
    <type>Text</type>
</CustomField>