force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Count__c</fullName>
    <label>Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>