force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Date_last_seen__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_last_seen__c</fullName>
    <inlineHelpText>When did you last see a visitor at the property?</inlineHelpText>
    <label>Date last seen</label>
    <type>Date</type>
</CustomField>