force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Days_in_this_condition__c.field-meta.xml
<CustomField>
    <fullName>aos_Days_in_this_condition__c</fullName>
    <formula>aos_First_noticed_animal_condition__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in this condition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>