force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Describe_why_the_incident_occurred__c.field-meta.xml
<CustomField>
    <fullName>aos_Describe_why_the_incident_occurred__c</fullName>
    <inlineHelpText>Do you believe there was any reason why the incident occurred?</inlineHelpText>
    <label>Describe why the incident occurred</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>