force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Duration_at_address__c.field-meta.xml
<CustomField>
    <fullName>aos_Duration_at_address__c</fullName>
    <inlineHelpText>Animal has been at address for (in days)</inlineHelpText>
    <label>Duration at address</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>