force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Energy_activity_behaviour__c.field-meta.xml
<CustomField>
    <fullName>aos_Energy_activity_behaviour__c</fullName>
    <label>Energy/activity/behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lethargic</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>