force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_First_noticed_animal_condition__c.field-meta.xml
<CustomField>
    <fullName>aos_First_noticed_animal_condition__c</fullName>
    <inlineHelpText>Can you state when you first noticed the animal/s condition?</inlineHelpText>
    <label>First noticed animal condition</label>
    <type>Date</type>
</CustomField>