force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Food_source__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_source__c</fullName>
    <label>Food source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplementary hand feeding</fullName>
            </value>
            <value>
                <fullName>Pasture/grass</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Hay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>