force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Food_water_bowls_present__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_water_bowls_present__c</fullName>
    <label>Food/water bowls present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>