force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Frequency__c.field-meta.xml
<CustomField>
    <fullName>aos_Frequency__c</fullName>
    <inlineHelpText>How often do you observe the dog/s to be in this situation i.e. morning, afternoon, evening, continously</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuously</fullName>
            </value>
            <value>
                <fullName>Mornings</fullName>
            </value>
            <value>
                <fullName>Afternoons</fullName>
            </value>
            <value>
                <fullName>Evenings</fullName>
            </value>
            <value>
                <fullName>When no owners present</fullName>
            </value>
            <value>
                <fullName>Randomly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>