force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Frequency_off_tether__c.field-meta.xml
<CustomField>
    <fullName>aos_Frequency_off_tether__c</fullName>
    <inlineHelpText>How often do you believe the dog/s are exercised (off tether/free from confinement) in hours per day?</inlineHelpText>
    <label>Frequency off tether</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>