force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Has_history__c.field-meta.xml
<CustomField>
    <fullName>aos_Has_history__c</fullName>
    <inlineHelpText>Have you witnessed other animal/s in a similar condition at the address previously?</inlineHelpText>
    <label>Has history</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>