force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_History_description__c.field-meta.xml
<CustomField>
    <fullName>aos_History_description__c</fullName>
    <label>History description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>