force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_How_high_is_the_animal_metres__c.field-meta.xml
<CustomField>
    <fullName>aos_How_high_is_the_animal_metres__c</fullName>
    <label>How high is the animal (metres)?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>