force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Ill_treatment__c.field-meta.xml
<CustomField>
    <fullName>aos_Ill_treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ill-treatment</label>
    <type>Checkbox</type>
</CustomField>