force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Imported__c.field-meta.xml
<CustomField>
    <fullName>aos_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>