force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_In_need_of_Veterinary_Treatment__c.field-meta.xml
<CustomField>
    <fullName>aos_In_need_of_Veterinary_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In need of Veterinary Treatment</label>
    <type>Checkbox</type>
</CustomField>