force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Information_on_Person_of_Property__c.field-meta.xml
<CustomField>
    <fullName>aos_Information_on_Person_of_Property__c</fullName>
    <label>Information on Person of Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>