force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Injury_details__c.field-meta.xml
<CustomField>
    <fullName>aos_Injury_details__c</fullName>
    <label>Injury details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>