force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Insufficient_Food_and_Water__c.field-meta.xml
<CustomField>
    <fullName>aos_Insufficient_Food_and_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insufficient Food and Water</label>
    <type>Checkbox</type>
</CustomField>