force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Insufficient_Shelter__c.field-meta.xml
<CustomField>
    <fullName>aos_Insufficient_Shelter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insufficient Shelter</label>
    <type>Checkbox</type>
</CustomField>